--- a/src/assets/sass/Home.scss
+++ b/src/assets/sass/Home.scss
@@ -10,6 +10,11 @@
     top: 10%;
     color: white;
     font-size: var.$score;
+    margin: 0%;
+  }
+
+  .afterStartBtn {
+    display: none;
   }
 
   .square {
